[gd_scene load_steps=7 format=3 uid="uid://cd4h4o6ygon33"]

[ext_resource type="Script" uid="uid://buukpfcvwe3oh" path="res://Scripts/title_screen.gd" id="1_kjfxj"]
[ext_resource type="Texture2D" uid="uid://b1khy40ouy15o" path="res://Assets/Art/Logo.png" id="2_emot1"]
[ext_resource type="AudioStream" uid="uid://dyin2tlibuvef" path="res://Assets/Audio/main-bgm.ogg" id="3_8l4an"]
[ext_resource type="PackedScene" uid="uid://bckssfqgh4eiw" path="res://Scenes/otomo.tscn" id="3_n15yj"]
[ext_resource type="Texture2D" uid="uid://dwqwfnf745u3v" path="res://Assets/Art/Tutorial.png" id="4_emot1"]
[ext_resource type="Texture2D" uid="uid://b4olhlrp6wp5l" path="res://Assets/Background/Credits.png" id="5_i5sur"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kjfxj")

[node name="TitleText" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 961.0
offset_bottom = 252.0
texture = ExtResource("2_emot1")
stretch_mode = 3

[node name="MenuButtons" type="VBoxContainer" parent="."]
z_index = 1
y_sort_enabled = true
layout_mode = 0
offset_left = 305.0
offset_top = 320.0
offset_right = 655.0
offset_bottom = 520.0

[node name="Start" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Start"

[node name="Tutorial" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Tutorial"

[node name="Credits" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Credits"

[node name="BackgroundImage" type="CanvasLayer" parent="."]
layer = -2

[node name="ColorRect" type="ColorRect" parent="BackgroundImage"]
custom_minimum_size = Vector2(350, 360)
offset_right = 960.0
offset_bottom = 540.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="BackgroundImage"]
visible = false
offset_left = -927.0
offset_top = 475.0
offset_right = 33.0
offset_bottom = 1015.0

[node name="TextureRect" type="TextureRect" parent="BackgroundImage/CenterContainer"]
layout_mode = 2

[node name="Otomo" parent="BackgroundImage" instance=ExtResource("3_n15yj")]
position = Vector2(176, 419)

[node name="TutorialScreen" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="TutorialScreen"]
offset_right = 962.0
offset_bottom = 540.0
texture = ExtResource("4_emot1")
metadata/_edit_lock_ = true

[node name="CreditsScreen" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="CreditsScreen"]
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("5_i5sur")
metadata/_edit_lock_ = true

[node name="Back" type="CanvasLayer" parent="."]
layer = 2

[node name="BackButton" type="Button" parent="Back"]
visible = false
offset_left = 840.0
offset_top = 473.0
offset_right = 930.0
offset_bottom = 515.0
theme_override_font_sizes/font_size = 28
text = "Back
"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8l4an")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="MenuButtons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuButtons/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MenuButtons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Back/BackButton" to="." method="_on_back_pressed"]
